--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
   "name": "agents-island",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "license": "Apache-2.0",
   "scripts": {
+    "move:test": "node ./scripts/move/test",
+    "move:compile": "node ./scripts/move/compile",
+    "move:publish": "node ./scripts/move/publish && node ./scripts/move/get_abi",
+    "move:upgrade": "node ./scripts/move/upgrade && node ./scripts/move/get_abi",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "deploy": "vercel",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "_fmt": "prettier 'src/**/*.ts'",
+    "fmt": "npm run _fmt -- --write"
   },
   "dependencies": {
-    "@hookform/resolvers": "^4.1.2",
+    "@aptos-labs/ts-sdk": "^1.30.0",
+    "@aptos-labs/wallet-adapter-react": "^4.1.0",
+    "@ducanh2912/next-pwa": "^10.2.9",
+    "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-context-menu": "^2.2.6",
     "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-menubar": "^1.1.6",
@@ -33,38 +44,52 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "class-variance-authority": "^0.7.1",
+    "@tanstack/react-query": "^5.51.23",
+    "@thalalabs/surf": "^1.7.3",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^12.5.0",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.476.0",
-    "next": "15.1.7",
-    "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "lucide-react": "^0.383.0",
+    "next": "^14.2.8",
+    "next-themes": "^0.4.6",
+    "react": "^18.2.0",
+    "react-day-picker": "8.10.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^6.23.1",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^2.3.0",
+    "tailwind-variants": "^1.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "thirdweb": "^5.90.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/node": "^20.14.1",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "autoprefixer": "^10.4.19",
+    "dotenv": "16.3.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.2",
+    "tailwindcss": "^3.4.3",
+    "tree-kill": "1.2.2",
+    "typescript": "^5.2.2",
+    "vercel": "^35.2.4"
   }
 }
