--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "lucide-react": "^0.383.0",
     "next": "^14.2.8",
     "next-themes": "^0.4.6",
+    "openai": "^4.89.0",
     "react": "^18.2.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
