--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@aptos-labs/wallet-adapter-react": "^4.1.0",
     "@ducanh2912/next-pwa": "^10.2.9",
     "@hookform/resolvers": "^4.1.3",
+    "@langchain/anthropic": "^0.3.15",
+    "@langchain/core": "^0.3.43",
+    "@langchain/langgraph": "^0.2.59",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -51,6 +54,7 @@
     "@supabase/supabase-js": "^2.49.3",
     "@tanstack/react-query": "^5.51.23",
     "@thalalabs/surf": "^1.7.3",
+    "ai": "^4.2.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -59,6 +63,7 @@
     "framer-motion": "^12.5.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.383.0",
+    "move-agent-kit": "^0.2.0",
     "next": "^14.2.8",
     "next-themes": "^0.4.6",
     "openai": "^4.89.0",
